Fix math without \

--- a/midterm/Output.tex
+++ b/midterm/Output.tex
@@ -347,7 +347,7 @@
         Let $f(\vec{y}^{RB}_\mathcal{B}) = \sum^n_{i=1} d^{RB}(x_i,y)$ be an objective function, where $x_i \in \mho(\mathcal{K}_i)$.
     \end{proof}
 
-    Let $C = { \vec{y}^{RB}_\mathcal{B} \in mathbb{R}^n|\sum^n_{i=1} y_i = 1, \vec{y}^{RB}_\mathcal{B} \geq \vec{0} }$ be
+    Let $C = { \vec{y}^{RB}_\mathcal{B} \in \mathbb{R}^n|\sum^n_{i=1} y_i = 1, \vec{y}^{RB}_\mathcal{B} \geq \vec{0} }$ be
     a constraint set. Suppose that $\mathcal{Y}$ is optimal for (16).
     Then there exists $\vec{y}^{RB}_\mathcal{B}$ such that $\mathcal{Y} = \sum^n_{i=1} d^{RB}(x_i, y)$
     and $y \in \vec{y}^{RB}_\mathcal{B} , \vec{y}^{RB}_\mathcal{B}$ is an optimal point. This leads to $\mathcal{C}$
@@ -380,7 +380,7 @@
         Let $f(\vec{y}^{LE}_\mathcal{B} ) = \sum^n_{i=1} d^{KL}(x_i, y)$ be an objective function, where $x_i \in \mho(\mathcal{K}_i)$.
     \end{proof}
 
-    Let $C = {\vec{y}^{LE}_\mathcal{B} \in mathbb{R}^n|\sum^n_{i=1} y_i = 1, \vec{y}^{LE}_\mathcal{B} \geq \vec{0} }$ be a
+    Let $C = {\vec{y}^{LE}_\mathcal{B} \in \mathbb{R}^n|\sum^n_{i=1} y_i = 1, \vec{y}^{LE}_\mathcal{B} \geq \vec{0} }$ be a
     constraint set. Suppose that y is optimal for (18).
     Then there exists $\vec{y}^{SE}_\mathcal{B}$ such that $y = \sum^n_{i=1} d^{KL}(x_i, y)$
     and $y \in \vec{y}^{LE}_\mathcal{B} , \vec{y}^{LE}_\mathcal{B}$ is an optimal point. This leads to
