Fix math without \

--- a/midterm/Output.tex
+++ b/midterm/Output.tex
@@ -476,7 +476,7 @@
     Let  $\mathcal{B} = {\mathcal{K}_1, ...,\mathcal{K}_n}$. Let $I_\mathcal{B} = {1, ..., n} $
     Let $\mathcal{H} = { \mho : \exists I_\mathcal{H} \subseteq I_\mathcal{B} : \mho = \cap_{i \in I_\mathcal{H}} \mho(\mathcal{K}_i) \neq \emptyset and \forall j \in I_\mathcal{B} \ I_\mathcal{H}(\cap_i\in I_\mathcal{H} \mho(\mathcal{K}_i)) \cap \mho(\mathcal{K}_j) \neq \emptyset }$
 
-    \textbf{Proposition 15}. Let $\hat{A}_\mathcal{B} = (\vec{a}^T_1 ...\vec{a}^T_|mathcal{H}|)$ be profile
+    \textbf{Proposition 15}. Let $\hat{A}_\mathcal{B} = (\vec{a}^T_1 ...\vec{a}^T_|\mathcal{H}|)$ be profile
     matrix, where $\vec{\alpha} = \mho_i$ with $\mho_i \in \mathcal{H}$. There exist positive
     real numbers $\lambda_i \in [0, 1]$ with $\sum^{|\mathcal{H}|}_{i=1} \lambda_i = 1$ such
     that,
